--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "inquirer": "^7.3.3"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,8 +20,5 @@
   "bugs": {
     "url": "https://github.com/vtaymany/readme-generator-pro/issues"
   },
-  "homepage": "https://github.com/vtaymany/readme-generator-pro#readme",
-  "dependencies": {
-    "inquirer": "^7.3.3"
-  }
+  "homepage": "https://github.com/vtaymany/readme-generator-pro#readme"
 }
